fix: realigned checkbox

--- a/components/IntroSkillOrbit/IntroSkillOrbit.module.scss
+++ b/components/IntroSkillOrbit/IntroSkillOrbit.module.scss
@@ -249,7 +249,7 @@
       .checkboxUnchecked {
         width: 1.1rem;
         height: 1.1rem;
-        transform: translate(-0.2rem, 0.34rem);
+        transform: translate(-0.2rem, 0.24rem);
         filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(152deg)
           brightness(110%) contrast(101%);
       }
@@ -257,7 +257,6 @@
         display: none;
         width: 1.35rem;
         height: 1.35rem;
-        transform: translateY(0.1rem);
         filter: invert(88%) sepia(13%) saturate(6042%) hue-rotate(94deg)
           brightness(101%) contrast(101%);
       }
